--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,3 +54,11 @@ services:
     environment:
       KAFKA_BROKERS: kafka:9092
       ZK_CONNECT: zookeeper:2181
+
+#  weather-provider:
+#    image: ${REGISTRY_URI}/ucu-class/weather-provider:${STUDENT_NAME}-0.1
+#    depends_on:
+#      - kafka
+#    environment:
+#      KAFKA_BROKERS: kafka:9092
+#      ZK_CONNECT: zookeeper:2181
